--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DDprojet</string>
+
+    <string name="open_actionBar">Ouvrir le menu</string>
+    <string name="close_actionBar">Fermer le menu</string>
 </resources>
