update characterSelectionView + add NewCharacterView layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="open_actionBar">Ouvrir le menu</string>
     <string name="close_actionBar">Fermer le menu</string>
 
-    <string name="test">test</string>
+    <string name="main_font">@font/balthazar</string>
+
 </resources>
