--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,16 +9,16 @@
     <string name="main_font">@font/balthazar</string>
 
 
-    <string-array name="array_1">
-        <item>chaotic</item>
-        <item>neutral</item>
-        <item>lawfull</item>
+    <string-array name="array_lawfulChaoticAxis">
+        <item>Lawful</item>
+        <item>Neutral</item>
+        <item>Chaotic</item>
     </string-array>
 
-    <string-array name="array_2">
-        <item>evil</item>
-        <item>neutral</item>
-        <item>good</item>
+    <string-array name="array_goodEvilAxis">
+        <item>Good</item>
+        <item>Neutral</item>
+        <item>Evil</item>
     </string-array>
 
 
